--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,1 +1,2 @@
-$primary-font: 'Open Sans', sans-serif;
+$primary-font: "Open Sans", sans-serif;
+$secondary-font: "Poppins", sans-serif;
